# app

./: CMakeLists.txt  README.md  icon.rc  mac-build.sh  main.cpp  res.cpp
.github/workflows/: icons.yaml  msbuild.yml
icons/: ZipCombiner.icns
mac/: Info.plist  ZipCombiner.entitlements
windows/: ins.iss
